--- a/client/templates/playlist.html
+++ b/client/templates/playlist.html
@@ -1,4 +1,6 @@
 <p>
   TRIBELIST
 </p>
-<iframe ng-repeat="song in ctrl.playlist" ng-src="{{'https://open.spotify.com/embed?uri=' + song.uri}}" width="400" height="100" frameborder="0" allowtransparency="true"></iframe>
+<div ng-repeat="song in ctrl.playlist">
+  <iframe ng-src="{{'https://open.spotify.com/embed?uri=' + song.uri}}" width="400" height="100" frameborder="0" allowtransparency="true"></iframe>
+</div>
